--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>AR in Web</title>
+	<title>AR in Web dev</title>
 </head>
 <body>
 	<script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
